tests/snapshots/run_wpt_conformance__litert_pad_float16_2D_tensor_options_value_default_constant_mode.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float16 2D tensor options.value default constant mode, litert
 pad :: pad float16 2D tensor options.value default constant mode: index 0: actual=0 expected=1 ulp=15360 tolerance=4
  inputs: padInput: [22.765625, -21.171875, -91.6875, 16.859375, 60.5, -70.5625, -60.65625, -47.875, 68.75]
  expected padOutput: [1, 1, 1, 1, 1, 1, 22.765625, -21.171875, -91.6875, 1 ...] (len=25)
  actual padOutput: [0, 0, 0, 0, 0, 0, 22.765625, -21.171875, -91.6875, 0 ...] (len=25)
  expected padOutput full nd:
[1, 1, 1, 1, 1, 1, 22.765625, -21.171875, -91.6875, 1, ...] (len=25, shape=[5, 5])
  actual padOutput full nd:
[0, 0, 0, 0, 0, 0, 22.765625, -21.171875, -91.6875, 0, ...] (len=25, shape=[5, 5])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f16[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value=1);
  }

  outputs { padOutput; }
}
