tests/snapshots/run_wpt_conformance__litert_pad_float32_2D_tensor_with_options_value_as_-Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float32 2D tensor with options.value as -Infinity, litert
 pad :: pad float32 2D tensor with options.value as -Infinity: index 0: actual=0 expected=-inf ulp=4294967295 tolerance=4
  inputs: padInput: [22.76361846923828, -21.168529510498047, -91.66168975830078, 16.863798141479492, 60.51472091674805, -70.56755065917969, -60.643272399902344, -47.8821907043457, 68.72557830810547]
  expected padOutput: [-inf, -inf, -inf, -inf, -inf, -inf, 22.763618, -21.16853, -91.66169, -inf ...] (len=25)
  actual padOutput: [0, 0, 0, 0, 0, 0, 22.763618, -21.16853, -91.66169, 0 ...] (len=25)
  expected padOutput full nd:
[-inf, -inf, -inf, -inf, -inf, -inf, 22.763618, -21.16853, -91.66169, -inf, ...] (len=25, shape=[5, 5])
  actual padOutput full nd:
[0, 0, 0, 0, 0, 0, 22.763618, -21.16853, -91.66169, 0, ...] (len=25, shape=[5, 5])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f32[3, 3];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="", value="-Infinity");
  }

  outputs { padOutput; }
}
